--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title></title>
 </head>
 <body>
+
+    <nav class="nav1">
+        <h1>Turbo Credit</h1>
+
+        <button class="main-text">
+            գլխավոր
+        </button>
+
+        <button class="btn2">
+            գախտնության Քաղաքականությանը
+        </button>
+
+        <button class="get_money">
+            Ստանալ Գումար
+        </button>
+    </nav>
     
 </body>
 </html>
