changed html css file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <nav class="nav1">
-        <h1>Turbo Credit</h1>
+        <h1><em>Turbo Credit</em></h1>
 
         <button class="main-text">
             գլխավոր
@@ -24,6 +24,23 @@
             Ստանալ Գումար
         </button>
     </nav>
+
+        <h1 class="main-text">Ստացիր գւմար հենց հիմա օնլայն</h1><br>
+        <h1 class="main-text2">Սեւ ցուցակւմ գտնվող անձանձ</h1><br>
+        <h1 class="main-text3">չդիմել</h1><br><br><br>
+
+    <form action="" class="form-inp">
+        <input type="text" name="name_surname" id="inp-name_surname" placeholder="Անւն Ազգանւն"><br><br>
+        <input type="number" name="year" id="year" placeholder="Տարիք"><br><br>
+        <input type="number" name="telephone" id="telephone" placeholder="Հեռախոսահամար"><br><br>
+        <input type="number" name="many" id="many" placeholder="Անհրաժեշտ գւմարի չափը"><br><br>
+    </form><br><br><br>
+
+    <input type="checkbox" class="checkbox1">Այօ
+    <input type="checkbox" class="checkbox2">nչ <br><br>
+
+    <input type="checkbox" class="checkbox1">Այօ
+    <input type="checkbox" class="checkbox2">nչ
     
 </body>
 </html>
