--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
         <input type="number" name="many" id="many" placeholder="Անհրաժեշտ գւմարի չափը"><br><br>
     </form><br><br><br>
 
-    <input type="checkbox" class="checkbox1">Այօ
-    <input type="checkbox" class="checkbox2">nչ <br><br>
+    <form action="handler.php">
+         <p><input class="radio1" name="k" type="radio" value="nk">Այօ</p>
+         <p><input class="radio2" name="k" type="radio" value="k">nչ</p><br>
+         <p><input class="radio1" name="m" type="radio" value="pm">Այօ</p>
+         <p><input class="radio2" name="m" type="radio" value="pm">nչ</p>
+       </form> 
 
-    <input type="checkbox" class="checkbox1">Այօ
-    <input type="checkbox" class="checkbox2">nչ
-    
 </body>
 </html>
